# Zero-Protocol-Desktop

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml
src/: App.jsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: daemon_ipc.rs  main.rs  wintun_mgr.rs
src-tauri/windows/: app.manifest
