[package]
name = "zero-protocol"
version = "1.0.0"
description = "Zero Protocol — Post-Quantum Sphinx Mixnet VPN"
authors = ["Zero Protocol"]
license = "MIT"
repository = "https://github.com/muhammedimrans/Zero_VPN"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.6", features = [
  "shell-open",
  "system-tray",
  "window-hide",
  "window-show",
  "window-set-focus",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]
